retornando cliente em PedidoResumoModel